<resources>
    <string name="app_name">Meubles Salsabil</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="email">Email</string>
    <string name="button_connexion">Connecter</string>
    <string name="creer_votre_compte">Créer votre compte</string>
    <string name="phone">Téléphone</string>
    <string name="creer_un_compte">Créer un compte</string>
    <string name="nom">Prénom</string>
    <string name="lang">Français</string>
    <string name="fb_login">Connecter avec Facebook</string>
    <string name="next_btn">Suivant</string>
    <string name="login">Connexion</string>
    <string name="new_login">Nouveau compte</string>
    <string name="remember_me">"se souvenir "</string>
    <string name="forget_pass">Mot de passe oublié ?</string>
    <string name="last_name">Nom</string>
    <string name="search">Recherchez ...</string>
    <string name="welcome_text">Bienvenue %s.</string>
    <string name="welc_desc">Qu\'est ce que vous voulez acheter aujourd\'hui?</string>
    <string name="voir_nos_produits"><![CDATA[Voir nos produits >]]></string>
    <string name="produits_les_plus_populaires"><![CDATA[Produits les plus populaires >]]></string>
    <string name="discount">Promo </string>
    <string name="discount_desc">Durée limitée</string>
    <string name="password_error">mot de passe doit contenir au moins 8 caractéres</string>
    <string name="email_error">Entrer votre mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Acceuil</string>
    <string name="favourites">favouries</string>
    <string name="shoplist">Achats</string>
    <string name="settings">Paramétres</string>
    <string name="somme_totale">Somme totale</string>
    <string name="somme_value">%d da</string>
    <string name="confirmer_vos_achats">Confirmer vos achats</string>
    <string name="favouries">Favouries</string>
    <string name="ordres">Ordres</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="email_display">%s</string>
    <string name="parametres">Paramétres</string>
    <string name="logout">Déconnexion</string>
    <string name="lang_updated">la langue a été modifiée</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="phone_display">%s</string>
    <string name="personal_info">Informations personnelles</string>
    <string name="langue">Langue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">الفئة :</string>
    <string name="width">العرض :</string>
    <string name="height">الإرتفاع :</string>
    <string name="length">الطول</string>
    <string name="quantity">الكمية :</string>
    <string name="about_us">تم انشاء التطبيق من طرف CREATECH DZ وهي شركة ....</string>
    <string name="currency">دج</string>
    <string name="facebook_app_id" translatable="false">748764105761658</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb748764105761658</string>

    <string name="merci">شكرا !</string>
    <string name="about_theapp">About the App</string>
    <string name="empty">فارغ</string>
    <string name="shouldbe_same">يجب ان يتطابقا</string>
    <string name="updated">تم التحديث</string>
    <string name="pass_wrong">كلمة السر خاطئة</string>
    <string name="verify_mail">"يبدو انك لم تفعل حسابك , تفقد بريدك الوارد في ايميلك "</string>
    <string name="succ">نجاح</string>
    <string name="reactivate_account">إعادة تفعيل الحساب</string>
    <string name="send_objection">إعتراض على القرار</string>
</resources>